[gd_scene load_steps=9 format=2]

[ext_resource path="res://interactables/buildbench.gd" type="Script" id=1]
[ext_resource path="res://interactables/components_list.gd" type="Script" id=2]
[ext_resource path="res://interactables/bb_brequests.gd" type="Script" id=3]
[ext_resource path="res://interactables/builds_gui.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=13]

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.643137, 0.643137, 0.643137, 1 )

[sub_resource type="CubeMesh" id=10]

[node name="build_bench" type="StaticBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.43561, 1.27134, 0.00152183 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0 )
shape = SubResource( 13 )

[node name="visuals" type="Spatial" parent="."]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="visuals"]
transform = Transform( 1.40211, 0, 0, 0, 0.0718723, 0, 0, 0, 0.657221, 0, -0.414657, 0 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="MeshInstance2" type="MeshInstance" parent="visuals"]
transform = Transform( 0.105727, 0, 0, 0, 0.448526, 0, 0, 0, 0.600278, -1.28478, -0.904023, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="visuals"]
transform = Transform( 0.105727, 0, 0, 0, 0.448526, 0, 0, 0, 0.600278, 1.26417, -0.904023, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="build_projects" type="Spatial" parent="."]

[node name="bp_pos" type="Position3D" parent="build_projects"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, -0.348499, 0 )

[node name="buildbench_gui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2

[node name="builds" type="Control" parent="buildbench_gui"]
unique_name_in_owner = true
anchor_right = 0.249
anchor_bottom = 0.517
margin_right = 0.00398254
margin_bottom = 0.139984
rect_min_size = Vector2( 250, 250 )
script = ExtResource( 4 )

[node name="bg" type="ColorRect" parent="buildbench_gui/builds"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="build_selector" type="VBoxContainer" parent="buildbench_gui/builds"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 10

[node name="new_project" type="Button" parent="buildbench_gui/builds/build_selector"]
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "start new build project"

[node name="created_bps" type="Label" parent="buildbench_gui/builds/build_selector"]
margin_top = 30.0
margin_right = 240.0
margin_bottom = 44.0
text = "projects"
align = 1

[node name="bpj_list" type="VBoxContainer" parent="buildbench_gui/builds/build_selector"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 240.0
margin_bottom = 54.0
custom_constants/separation = 5

[node name="build_details" type="VBoxContainer" parent="buildbench_gui/builds"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="buildbench_gui/builds/build_details"]
margin_right = 240.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="back" type="Button" parent="buildbench_gui/builds/build_details/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "back"

[node name="pj_name" type="Label" parent="buildbench_gui/builds/build_details/HBoxContainer"]
unique_name_in_owner = true
margin_left = 45.0
margin_right = 240.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 5
align = 1

[node name="required" type="VBoxContainer" parent="buildbench_gui/builds/build_details"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 240.0
margin_bottom = 570.0
size_flags_vertical = 3

[node name="brequests" type="Control" parent="buildbench_gui"]
anchor_top = 0.569
anchor_right = 0.249
anchor_bottom = 1.0
margin_top = -0.019989
margin_right = 0.00398254
grow_vertical = 0
rect_min_size = Vector2( 250, 250 )
script = ExtResource( 3 )

[node name="bg" type="ColorRect" parent="buildbench_gui/brequests"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="brequest_selector" type="VBoxContainer" parent="buildbench_gui/brequests"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 10

[node name="r_builds_label" type="Label" parent="buildbench_gui/brequests/brequest_selector"]
margin_right = 240.0
margin_bottom = 14.0
text = "Requested"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="buildbench_gui/brequests/brequest_selector"]
margin_top = 24.0
margin_right = 240.0
margin_bottom = 240.0
size_flags_vertical = 3

[node name="rb_list" type="VBoxContainer" parent="buildbench_gui/brequests/brequest_selector/ScrollContainer"]
unique_name_in_owner = true
margin_right = 240.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="components_gui" type="Control" parent="buildbench_gui"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -290.0
margin_bottom = 290.0
grow_horizontal = 0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="buildbench_gui/components_gui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="buildbench_gui/components_gui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0

[node name="Label" type="Label" parent="buildbench_gui/components_gui/VBoxContainer"]
margin_right = 240.0
margin_bottom = 14.0
text = "Components"
align = 1

[node name="search_filters" type="HBoxContainer" parent="buildbench_gui/components_gui/VBoxContainer"]
margin_top = 18.0
margin_right = 240.0
margin_bottom = 38.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 20 )
alignment = 1

[node name="Label" type="Label" parent="buildbench_gui/components_gui/VBoxContainer/search_filters"]
margin_left = 17.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 17.0
text = "filter by: "

[node name="broken" type="Button" parent="buildbench_gui/components_gui/VBoxContainer/search_filters"]
margin_left = 78.0
margin_right = 134.0
margin_bottom = 20.0
toggle_mode = true
text = "broken"

[node name="new" type="Button" parent="buildbench_gui/components_gui/VBoxContainer/search_filters"]
margin_left = 138.0
margin_right = 176.0
margin_bottom = 20.0
toggle_mode = true
text = "new"

[node name="used" type="Button" parent="buildbench_gui/components_gui/VBoxContainer/search_filters"]
margin_left = 180.0
margin_right = 223.0
margin_bottom = 20.0
toggle_mode = true
text = "used"

[node name="comps_list" type="VBoxContainer" parent="buildbench_gui/components_gui/VBoxContainer"]
unique_name_in_owner = true
margin_top = 42.0
margin_right = 240.0
margin_bottom = 570.0
grow_horizontal = 0
size_flags_vertical = 3

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="buildbench_gui"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -34.0
margin_right = 89.5
margin_bottom = 34.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "New project name"

[node name="LineEdit" type="LineEdit" parent="buildbench_gui/ConfirmationDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
align = 1
placeholder_text = "New Build Project"

[connection signal="build_project_selected" from="buildbench_gui/builds" to="." method="_on_builds_build_project_selected"]
[connection signal="create_new_project" from="buildbench_gui/builds" to="." method="_on_builds_create_new_project"]
[connection signal="uninstalled_component" from="buildbench_gui/builds" to="." method="_on_builds_uninstalled_component"]
[connection signal="pressed" from="buildbench_gui/builds/build_selector/new_project" to="buildbench_gui/builds" method="_on_new_project_pressed"]
[connection signal="pressed" from="buildbench_gui/builds/build_details/HBoxContainer/back" to="buildbench_gui/builds" method="_on_back_pressed"]
[connection signal="install_component" from="buildbench_gui/components_gui" to="." method="_on_components_gui_install_component"]
[connection signal="confirmed" from="buildbench_gui/ConfirmationDialog" to="buildbench_gui/builds" method="_on_ConfirmationDialog_confirmed"]
